Fix input element color to improve contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 :root {
   --color-background: #fafafa;
   --color-element-background: #ffffff;
-  --color-input-content: #848484;
-  --color-input-placeholder: #c4c4c4;
+  --color-input-content: #777575;
+  --color-input-placeholder: #777575;
   --color-text: #111517;
   --font-family: 'Nunito Sans', sans-serif;
   --font-weight-black: 900;
